# applied-ai-builder

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
utils/: ai_engine.py  extraction.py  processor.py  reporter.py
